improve html and css

--- a/src/nunjucks/_base.html
+++ b/src/nunjucks/_base.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DB2</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
     <div class='wrapper'>
         <header>
-            <img src="photo_2020-09-24_13-23-03.jpg" id="logo">
+            <img src="logo.png" id="logo">
             <nav class='question'>
                 <p>{{ text }}</p>
                 <a href="{{ href }}"> {{ page }} </a>
