--- a/src/nunjucks/forgot-password.html
+++ b/src/nunjucks/forgot-password.html
@@ -1,5 +1,6 @@
 {% extends '_base.html'%}
 {% set text = "Back to"%}
+{% set href="index.html" %}
 {% set page = "Sign in" %}
 {% set description = "Enter your e-mail to reset your password" %}
 {% block content %}
