--- a/src/nunjucks/reset-password.html
+++ b/src/nunjucks/reset-password.html
@@ -1,6 +1,7 @@
 {% extends '_base.html'%}
 {% set text = "Do not have an account?"%}
 {% set page = "Sign up" %}
+{% set href="sign-up-1.html" %}
 {% set description = "Reset your password" %}
 {% block content %}
   <nav class='input-index'>
