--- a/src/nunjucks/sign-up-1.html
+++ b/src/nunjucks/sign-up-1.html
@@ -1,5 +1,6 @@
 {% extends '_base.html'%}
 {% set text = "Already have an account?"%}
+{% set href="index.html" %}
 {% set page = "Log in" %}
 {% set description = "Sign up" %}
 {% block content %}
