--- a/src/nunjucks/sign-up-3.html
+++ b/src/nunjucks/sign-up-3.html
@@ -1,7 +1,8 @@
 {% extends '_base.html'%}
 {% set text = "Already have an account?"%}
+{% set href="index.html" %}
 {% set page = "Log in" %}
-{% set description = "Complete you account" %}
+{% set description = "Complete your account" %}
 {% block content %}
 <nav class='input-index'>
   <input type="text" placeholder="Create a password">
