start backend developing

--- a/src/nunjucks/_base.html
+++ b/src/nunjucks/_base.html
@@ -12,7 +12,7 @@
 <body>
     <div class='wrapper'>
         <header>
-            <img src="logo.png" id="logo">
+            <img src="./public/logo.png" id="logo">
             <nav class='question'>
                 <p>{{ text }}</p>
                 <a href="{{ href }}"> {{ page }} </a>
