--- a/src/nunjucks/_base_profile.html
+++ b/src/nunjucks/_base_profile.html
@@ -9,10 +9,10 @@
 </head>
 <body>
   <aside>
-    <img src="logo-mini.png" id="logo">
+    <img src="./profile/logo-mini.png" id="logo">
     <nav class="icons">
       <i class="fas fa-search"></i>
-      <i class="fas fa-user"></i>
+      <i class="fas fa-user" href="{{ destination }}"></i>
       <i class="fas fa-envelope"></i>
       <i class="fas fa-calendar-alt"></i>
     </nav>
